# market-events-service

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: d74cc3917839_create_market_events_and_sync_state_.py  fa59482c54c0_fix_datetime_timezone_in_market_events.py
app/: main.py
app/api/routes/: events.py  health.py
app/core/: config.py
app/database/: session.py
app/integrations/: normalizers.py  provider_a_client.py  provider_b_client.py
app/models/: event.py  sync_state.py
app/repositories/: event_repository.py  sync_repository.py
app/schemas/: event.py  sync.py
app/services/: cache_service.py  event_service.py  sync_service.py
tests/: conftest.py  test_api.py  test_deduplication.py  test_normalizers.py  test_sync_cooldown.py
